data/playtesting/sim-reports/archive/v1.0-alpha.97/audyt_level1_raport_4p.md
# Raport Audytu Poziomu 1 (Główne Mechaniki Systemowe) — Wersja Balansu: v1.0-alpha.97

**Wersja Balansu:** `v1.0-alpha.97` | **Data:** 2026-08-29 22:33 | **Przeanalizowano Wariantów:** 20 | **Próba:** 5000 gier/setup | **Czas:** 1.69s
**Wynik Bazy Poziomu 1 (Global):** `🟢 93.6 pkt` | 3p: `0.0 pkt` | 4p: `93.6 pkt` | 5p: `0.0 pkt`

## 1. Tabela Wyników Balansu i Delty (Zmiany) dla Każdego Składu Graczy

### 🌟 Warianty z Zyskiem (Dowolna kategoria > 0) — Posortowane wg Global Delta (1)

| ID | Element Poziomu 1 | Global (baza → test) | 3p (baza → test) | 4p (baza → test) | 5p (baza → test) | Status Balansu |
| :---: | :--- | :---: | :---: | :---: | :---: | :---: |
| `L1_BAZA` | Baza (Bieżące parametry systemowe) | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |

<details>
<summary><b>🔻 Pokaż pozostałe 19 wariantów bez zysku (wszystkie delty ≤ 0)...</b></summary>

| ID | Element Poziomu 1 | Global (baza → test) | 3p (baza → test) | 4p (baza → test) | 5p (baza → test) | Status Balansu |
| :---: | :--- | :---: | :---: | :---: | :---: | :---: |
| `L1_THRESHOLD_PLUS1` | Próg Oskarżenia: 7 → 8 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_THRESHOLD_MINUS1` | Próg Oskarżenia: 7 → 6 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_OBSERVED_PLUS1` | Próg Obserwowanej: 3 → 4 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_OBSERVED_MINUS1` | Próg Obserwowanej: 3 → 2 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_MAX_ERAS_PLUS1` | Limit Er: 15 → 16 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_MAX_ERAS_MINUS1` | Limit Er: 15 → 14 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_START_GOLD_PLUS1` | Złoto startowe: 4zł → 5zł | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_START_GOLD_MINUS1` | Złoto startowe: 4zł → 3zł | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_AGENTS_PLUS1` | Agenci: 3 → 4 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_AGENTS_MINUS1` | Agenci: 3 → 2 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_HAND_LIMIT_PLUS1` | Limit ręki: 5 → 6 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_HAND_LIMIT_MINUS1` | Limit ręki: 5 → 4 | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_AUTODAFE_COOLDOWN_PLUS1` | Cooldown Autodafé: 3 → 4 Ery | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_AUTODAFE_COOLDOWN_MINUS1` | Cooldown Autodafé: 3 → 2 Ery | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_INTRIGUE_GOLD_DOUBLE` | Akcja Gospodarcza: 1 → 2 (podwojenie) | 93.6 → 🟢 ** 93.6** (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 93.6 (`= 0.0`) | 0.0 → 0.0 (`= 0.0`) | ⚪ OPTYMALNY |
| `L1_INTRIGUE_GOLD_MINUS1` | Akcja Gospodarcza: 1 → 0 | 93.6 → 🔴 ** 51.1** (`🔻 -42.5`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 51.1 (`🔻 -42.5`) | 0.0 → 0.0 (`= 0.0`) | 🔴 POGARSZA GLOBALNIE |
| `L1_INTRIGUE_GOLD_PLUS1` | Akcja Gospodarcza: 1 → 2 | 93.6 → 🔴 ** 46.1** (`🔻 -47.5`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 46.1 (`🔻 -47.5`) | 0.0 → 0.0 (`= 0.0`) | 🔴 POGARSZA GLOBALNIE |
| `L1_CARDS_PER_ERA_MINUS1` | Karty/Erę: 2 → 1 | 93.6 → 🔴 ** 17.9** (`🔻 -75.7`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 17.9 (`🔻 -75.7`) | 0.0 → 0.0 (`= 0.0`) | 🔴 POGARSZA GLOBALNIE |
| `L1_CARDS_PER_ERA_PLUS1` | Karty/Erę: 2 → 3 | 93.6 → 🔴 ** 12.1** (`🔻 -81.5`) | 0.0 → 0.0 (`= 0.0`) | 93.6 → 12.1 (`🔻 -81.5`) | 0.0 → 0.0 (`= 0.0`) | 🔴 POGARSZA GLOBALNIE |

</details>

## 2. Pełna Tabela Telemetrii 5 Filarów z Zakresami (Min / Średnia / Max) i Zgodnością Norm

### 🌟 Telemetria Wariantów z Zyskiem (1)

| ID | Długość Gry (Ery) [Min–Max] | Deadlocks % (<15%) | Pas Biedy % (<30%) | Autodafé / Partię [Min–Max] | Oskarżenia / Partię [Min–Max] | Złoto End [Min–Max] | Herezja End [Min–Max] | Weryfikacja Norm Telemetrii |
| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
| `L1_BAZA` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |

<details>
<summary><b>🔻 Pokaż telemetrię pozostałych 19 wariantów bez zysku...</b></summary>

| ID | Długość Gry (Ery) [Min–Max] | Deadlocks % (<15%) | Pas Biedy % (<30%) | Autodafé / Partię [Min–Max] | Oskarżenia / Partię [Min–Max] | Złoto End [Min–Max] | Herezja End [Min–Max] | Weryfikacja Norm Telemetrii |
| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
| `L1_THRESHOLD_PLUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_THRESHOLD_MINUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_OBSERVED_PLUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_OBSERVED_MINUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_MAX_ERAS_PLUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_MAX_ERAS_MINUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_START_GOLD_PLUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_START_GOLD_MINUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_AGENTS_PLUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_AGENTS_MINUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_HAND_LIMIT_PLUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_HAND_LIMIT_MINUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_AUTODAFE_COOLDOWN_PLUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_AUTODAFE_COOLDOWN_MINUS1` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_INTRIGUE_GOLD_DOUBLE` | 5.76 Er (8–1) | 0.0% | 4.9% | 1.53 (0–0) | 7.63 (0–0) | 8.99zł (0.0–0.0) | 8.19 (0.0–0.0) | 🟢 W NORMIE |
| `L1_INTRIGUE_GOLD_MINUS1` | 5.87 Er (8–1) | 0.0% | 7.9% | 1.43 (0–0) | 8.16 (0–0) | 7.19zł (0.0–0.0) | 8.34 (0.0–0.0) | 🟢 W NORMIE |
| `L1_INTRIGUE_GOLD_PLUS1` | 5.62 Er (8–1) | 0.0% | 3.8% | 1.52 (0–0) | 7.07 (0–0) | 10.84zł (0.0–0.0) | 8.02 (0.0–0.0) | 🟢 W NORMIE |
| `L1_CARDS_PER_ERA_MINUS1` | 7.07 Er (8–1) | 0.0% | 0.5% | 1.87 (0–0) | 7.04 (0–0) | 9.01zł (0.0–0.0) | 7.83 (0.0–0.0) | ⚠️ WARTOŚCI BRZEGOWE |
| `L1_CARDS_PER_ERA_PLUS1` | 4.90 Er (8–1) | 0.0% | 8.2% | 1.30 (0–0) | 7.09 (0–0) | 10.16zł (0.0–0.0) | 8.26 (0.0–0.0) | ⚠️ WARTOŚCI BRZEGOWE |

</details>

## 3. Ustalone Ramy i Normy Telemetryczne Silnika Gry

- **⏱️ Długość gry (Ery):** Normatyw: **5.0 – 7.0 Er** (Zakres dopuszczalny: min 1, max 8). Zbyt szybka wygrana (<5 Er) grozi brakiem budowy silniczka, zbyt długa (>7 Er) wywołuje znużenie.
- **🔒 Remisy (Deadlocks %):** Tolerowany próg: **< 15.0%** gier kończących się limitem 8 Er bez zwycięzcy.
- **💰 Pas Biedy (Poverty Rate %):** Tolerowany próg: **< 30.0%** tur spędzonych na wymuszonym pasowaniu z braku monety.
- **🔥 Autodafé / Partię:** Optymalny wskaźnik agresji Inkwizytora: **0.5 – 2.0** wyczyszczeń na grę.
- **⚖️ Oskarżenia na Dworze / Partię:** Optymalna częstotliwość procesów politycznych: **1.5 – 4.5** oskarżeń na grę.